--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project",
+  "name": "react-webpack-api-cities",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
