--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "build-dev": "webpack -d --mode development",
-    "build-prod": "webpack -p --mode production",
+    "build:dev": "webpack -d --mode development",
+    "build:prod": "webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development"
   },
+  "browserslist": [
+    "last 10 versions"
+  ],
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^16.11.0+4.12.16",
+    "@types/jest": "^24.0.23",
     "@types/node": "latest",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
@@ -33,11 +37,13 @@
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "prettier": "^1.19.1",
     "sass": "latest",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.2",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
