--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.3"
   },
@@ -31,6 +32,7 @@
     "@types/node": "latest",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.4",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.2.0",
