--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,13 @@
     "moduleResolution": "node",
     "target": "es5",
     "allowJs": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "#/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "./src/**/*"
