--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^1.19.1",
     "sass": "latest",
     "sass-loader": "^8.0.0",
+    "sass-resources-loader": "^2.0.1",
     "style-loader": "^1.0.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.2",
