--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "last 10 versions"
   ],
   "dependencies": {
+    "dotenv-webpack": "^1.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
