--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
     "noImplicitAny": true,
     "module": "es6",
     "moduleResolution": "node",
+
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
     "target": "es5",
     "allowJs": true,
     "jsx": "react",
