tslint and tslint-react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": "./src",
     "paths": {
       "components/*": ["components/*"],
-      "core/*": ["core/*"]
+      "core/*": ["core/*"],
+      "pages/*": ["pages/*"]
     }
   },
   "include": ["./src/**/*"],
