--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "^1.0.0",
     "ts-jest": "^24.2.0",
     "tslint": "^6.0.0",
+    "tslint-react": "^4.2.0",
     "typescript": "^3.7.2",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
