--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "awesome-typescript-loader": "^5.2.1",
+    "circular-dependency-plugin": "^5.2.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
