--- a/package.json
+++ b/package.json
@@ -35,26 +35,27 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "awesome-typescript-loader": "^5.2.1",
     "circular-dependency-plugin": "^5.2.0",
     "css-loader": "^3.2.0",
+    "eslint": "^7.1.0",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
-    "jest": "^24.9.0",
+    "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "prettier": "^1.19.1",
     "sass": "latest",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.1",
     "style-loader": "^1.0.0",
-    "ts-jest": "^24.2.0",
-    "tslint": "^6.0.0",
-    "tslint-react": "^4.2.0",
+    "ts-jest": "^26.0.0",
     "typescript": "^3.7.2",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
